src/app/navbar/tabs/users/User.module.scss
.container {
    @include flex(column);
    border-bottom: 1px solid var(--c-background-secondary);
}

.user {
    padding: 0.5em;
    display: grid;
    grid-template-columns: var(--grid-columns);
    grid-gap: 0.5em;
    align-items: center;
    user-select: text;
    color: var(--c-text-primary-accent);
    font-family: $font-family-code;

    > p {
        @include font(400, 0.85em);
    }

    .id {
        font-weight: 500;
        text-align: right;
    }

    .type {
        @include flex(row, center, center);
    }

    .state {
        @include flex(row, center, center);

        > div {
            @include size(10px);
            border-radius: 100%;
            background: var(--c-red);
            border: 1px solid var(--c-red-accent);
        }

        &[data-activated] > div {
            background: var(--c-green);
            border: 1px solid var(--c-green-accent);
        }
    }

    .username {
        @include flex(row, center);

        > bc-icon {
            font-size: 14px;
            color: var(--c-primary);
            margin-left: 0.25em;
        }
    }

    .edit {
        color: currentColor;
        transition: all 0.3s;

        &:hover {
            color: var(--c-primary);
        }
    }
}

